--- a/kube-frontend/default.conf
+++ b/kube-frontend/default.conf
@@ -9,11 +9,11 @@ server {
 
 
     location /reverser {
-                proxy_pass http://python-backend-service:5000;
+                proxy_pass http://tt-backend-ecs-2039478589.ap-south-1.elb.amazonaws.com;
     }
 
     location /summation {
-                proxy_pass http://python-backend-service:5000;
+                proxy_pass http://tt-backend-ecs-2039478589.ap-south-1.elb.amazonaws.com;
     }
 
 
